# retail-location-predictor

./: .gitignore  README.md  pyproject.toml
docs/ru/: README.md
docs/ru/dev/: db.md  utils.md
notebooks/: 01_local_osm.ipynb
src/database/: config.py  db.py
