[project]
name = "retail-location-predictor"
version = "0.1.0"
description = "An ML project to develop neural network models for assessing the optimal location of retail outlets"
authors = [
    { name = "Ivan Lukovkin" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "kagglehub",
    "pandas-stubs",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "geoalchemy2 (>=0.18.1,<0.19.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "retail_location_predictor", from = "src" }
]